// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadForm expect to render 1`] = `
<Form
  className=""
  isHorizontal={false}
>
  <FormGroup
    className=""
    fieldId="file"
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Inventory data file"
  >
    <Dropzone
      accept={
        Array [
          "application/zip",
          "application/json",
        ]
      }
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    className=""
    fieldId="reportName"
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Report name"
  >
    <TextInput
      aria-describedby="Report name"
      aria-label={null}
      className=""
      id="reportName"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={true}
      name="reportName"
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="reportDescription"
    isInline={false}
    isRequired={false}
    isValid={true}
    label="Report description"
  >
    <TextInput
      aria-describedby="Report description"
      aria-label={null}
      className=""
      id="reportDescription"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={true}
      name="reportDescription"
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="yearOverYearGrowthRatePercentage"
    isInline={false}
    isRequired={true}
    isValid={true}
    label="Year-over-year growth rate for new hypervisors"
  >
    <Gallery
      className=""
      gutter={null}
    >
      <GalleryItem>
        <InputGroup
          className=""
        >
          <TextInput
            aria-describedby="Year-over-year growth rate for new hypervisors"
            aria-label={null}
            className="pf-u-text-align-right"
            id="yearOverYearGrowthRatePercentage"
            isDisabled={false}
            isReadOnly={false}
            isRequired={true}
            isValid={true}
            name="yearOverYearGrowthRatePercentage"
            onChange={[Function]}
            type="number"
          />
          <InputGroupText
            className=""
            component="span"
          >
            %
          </InputGroupText>
        </InputGroup>
      </GalleryItem>
    </Gallery>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    component="div"
    gutter="sm"
  >
    <StackItem
      className=""
      isFilled={false}
    >
      <FormGroup
        className=""
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        isInline={false}
        isRequired={false}
        isValid={true}
        label="Percentage of hypervisors migrated each year"
      >
        <Gallery
          className=""
          gutter={null}
        >
          <GalleryItem>
            <InputGroup
              className=""
            >
              <InputGroupText
                className=""
                component="span"
              >
                Year 1
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 1"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear1"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear1"
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className=""
                component="span"
              >
                %
              </InputGroupText>
            </InputGroup>
          </GalleryItem>
        </Gallery>
      </FormGroup>
    </StackItem>
    <StackItem
      className=""
      isFilled={false}
    >
      <FormGroup
        className=""
        fieldId=""
        isInline={false}
        isRequired={false}
        isValid={true}
        label=""
      >
        <Gallery
          className=""
          gutter={null}
        >
          <GalleryItem>
            <InputGroup
              className=""
            >
              <InputGroupText
                className=""
                component="span"
              >
                Year 2
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 2"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear2"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear2"
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className=""
                component="span"
              >
                %
              </InputGroupText>
            </InputGroup>
          </GalleryItem>
        </Gallery>
      </FormGroup>
    </StackItem>
    <StackItem
      className=""
      isFilled={false}
    >
      <FormGroup
        className=""
        fieldId=""
        isInline={false}
        isRequired={false}
        isValid={true}
        label=""
      >
        <Gallery
          className=""
          gutter={null}
        >
          <GalleryItem>
            <InputGroup
              className=""
            >
              <InputGroupText
                className=""
                component="span"
              >
                Year 3
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 3"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear3"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear3"
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className=""
                component="span"
              >
                %
              </InputGroupText>
            </InputGroup>
          </GalleryItem>
        </Gallery>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup
    className=""
  >
    <Button
      aria-label={null}
      className=""
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      isInline={false}
      type="submit"
      variant="primary"
    >
      Create report
    </Button>
    <Button
      aria-label={null}
      className=""
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      isInline={false}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
  </ActionGroup>
</Form>
`;

exports[`UploadForm expect to render errors 1`] = `
<Form
  className=""
  isHorizontal={false}
>
  <FormGroup
    className=""
    fieldId="file"
    helperTextInvalid="Field value invalid"
    isInline={false}
    isRequired={true}
    isValid={false}
    label="Inventory data file"
  >
    <Dropzone
      accept={
        Array [
          "application/zip",
          "application/json",
        ]
      }
      multiple={false}
      noClick={true}
      noKeyboard={true}
      onDrop={[Function]}
    >
      <Component />
    </Dropzone>
  </FormGroup>
  <FormGroup
    className=""
    fieldId="reportName"
    helperTextInvalid="Field value invalid"
    isInline={false}
    isRequired={true}
    isValid={false}
    label="Report name"
  >
    <TextInput
      aria-describedby="Report name"
      aria-label={null}
      className=""
      id="reportName"
      isDisabled={false}
      isReadOnly={false}
      isRequired={true}
      isValid={false}
      name="reportName"
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="reportDescription"
    helperTextInvalid="Field value invalid"
    isInline={false}
    isRequired={false}
    isValid={false}
    label="Report description"
  >
    <TextInput
      aria-describedby="Report description"
      aria-label={null}
      className=""
      id="reportDescription"
      isDisabled={false}
      isReadOnly={false}
      isRequired={false}
      isValid={false}
      name="reportDescription"
      onChange={[Function]}
      type="text"
    />
  </FormGroup>
  <FormGroup
    className=""
    fieldId="yearOverYearGrowthRatePercentage"
    helperTextInvalid="Field value invalid"
    isInline={false}
    isRequired={true}
    isValid={false}
    label="Year-over-year growth rate for new hypervisors"
  >
    <Gallery
      className=""
      gutter={null}
    >
      <GalleryItem>
        <InputGroup
          className=""
        >
          <TextInput
            aria-describedby="Year-over-year growth rate for new hypervisors"
            aria-label={null}
            className="pf-u-text-align-right"
            id="yearOverYearGrowthRatePercentage"
            isDisabled={false}
            isReadOnly={false}
            isRequired={true}
            isValid={false}
            name="yearOverYearGrowthRatePercentage"
            onChange={[Function]}
            type="number"
          />
          <InputGroupText
            className=""
            component="span"
          >
            %
          </InputGroupText>
        </InputGroup>
      </GalleryItem>
    </Gallery>
  </FormGroup>
  <Stack
    className="pf-sm-gutter"
    component="div"
    gutter="sm"
  >
    <StackItem
      className=""
      isFilled={false}
    >
      <FormGroup
        className=""
        fieldId="percentageOfHypervisorsMigratedOnYear1"
        helperTextInvalid="Field value invalid"
        isInline={false}
        isRequired={false}
        isValid={false}
        label="Percentage of hypervisors migrated each year"
      >
        <Gallery
          className=""
          gutter={null}
        >
          <GalleryItem>
            <InputGroup
              className=""
            >
              <InputGroupText
                className=""
                component="span"
              >
                Year 1
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 1"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear1"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={false}
                name="percentageOfHypervisorsMigratedOnYear1"
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className=""
                component="span"
              >
                %
              </InputGroupText>
            </InputGroup>
          </GalleryItem>
        </Gallery>
      </FormGroup>
    </StackItem>
    <StackItem
      className=""
      isFilled={false}
    >
      <FormGroup
        className=""
        fieldId=""
        helperTextInvalid="Field value invalid"
        isInline={false}
        isRequired={false}
        isValid={false}
        label=""
      >
        <Gallery
          className=""
          gutter={null}
        >
          <GalleryItem>
            <InputGroup
              className=""
            >
              <InputGroupText
                className=""
                component="span"
              >
                Year 2
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 2"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear2"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={false}
                name="percentageOfHypervisorsMigratedOnYear2"
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className=""
                component="span"
              >
                %
              </InputGroupText>
            </InputGroup>
          </GalleryItem>
        </Gallery>
      </FormGroup>
    </StackItem>
    <StackItem
      className=""
      isFilled={false}
    >
      <FormGroup
        className=""
        fieldId=""
        helperTextInvalid="Field value invalid"
        isInline={false}
        isRequired={false}
        isValid={false}
        label=""
      >
        <Gallery
          className=""
          gutter={null}
        >
          <GalleryItem>
            <InputGroup
              className=""
            >
              <InputGroupText
                className=""
                component="span"
              >
                Year 3
              </InputGroupText>
              <TextInput
                aria-label="Percentage of hypervisors migrated on year 3"
                className="pf-u-text-align-right"
                id="percentageOfHypervisorsMigratedOnYear3"
                isDisabled={false}
                isReadOnly={false}
                isRequired={true}
                isValid={true}
                name="percentageOfHypervisorsMigratedOnYear3"
                onChange={[Function]}
                type="number"
              />
              <InputGroupText
                className=""
                component="span"
              >
                %
              </InputGroupText>
            </InputGroup>
          </GalleryItem>
        </Gallery>
      </FormGroup>
    </StackItem>
  </Stack>
  <ActionGroup
    className=""
  >
    <Button
      aria-label={null}
      className=""
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      isInline={false}
      type="submit"
      variant="primary"
    >
      Create report
    </Button>
    <Button
      aria-label={null}
      className=""
      component="button"
      isActive={false}
      isBlock={false}
      isDisabled={false}
      isFocus={false}
      isHover={false}
      isInline={false}
      type="button"
      variant="secondary"
    >
      Cancel
    </Button>
  </ActionGroup>
</Form>
`;
